sanity check tests
