# confero-api/src/main/java/org/zpi/conferoapi/ApplicationController.java
@@ -2,20 +2,16 @@ package org.zpi.conferoapi;
 
 import org.openapitools.api.ApplicationApi;
 import org.openapitools.model.ApplicationPreviewResponse;
+import org.openapitools.model.CreateApplicationRequest;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
-
 
 @RestController
-class MyController implements ApplicationApi {
-
+class ApplicationController implements ApplicationApi {
 
     @Override
-    public ResponseEntity<List<ApplicationPreviewResponse>> getApplications() {
-        return ResponseEntity.of(Optional.of(new ArrayList<>()));
+    public ResponseEntity<ApplicationPreviewResponse> createApplication(CreateApplicationRequest createApplicationRequest) {
+        return null;
     }
 }
